--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "express": "^4.17.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^7.0.0-alpha.2"
+    "sequelize": "^7.0.0-alpha.2",
+    "sequelize-cli": "^6.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.2",
+    "@types/node": "^17.0.8",
     "typescript": "^4.5.4"
   }
 }
